--- a/Gallery.html
+++ b/Gallery.html
@@ -962,7 +962,7 @@
                             <li><a href="javascript:;.html" data-filter="all" class="active filter">All</a></li>
                             <li><a href="javascript:;.html" data-filter=".starters" class="filter">Starters</a></li>
                             <li><a href="javascript:;.html" data-filter=".drinks" class="filter">Drinks &amp;
-                                    Beverges</a></li>
+                                    Beverages</a></li>
                             <li><a href="javascript:;.html" data-filter=".dinner" class="filter"> Dinner</a></li>
                             <li><a href="javascript:;.html" data-filter=".lunch" class="filter">Breakfast &amp;
                                     Lunch</a></li>
@@ -974,7 +974,7 @@
                 <div class="zerogrid">
                     <div class="wrap-container">
                         <div class="wrap-content clearfix">
-                            <div class="col-1-4 mix work-item drinks heading_space">
+                            <div class="col-1-4 mix work-item dinner lunch heading_space">
                                 <div class="wrap-col">
                                     <div class="item-container">
                                         <div class="image">
@@ -993,11 +993,11 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-1-4 mix work-item starters heading_space">
+                            <div class="col-1-4 mix work-item lunch dinner heading_space">
                                 <div class="wrap-col">
                                     <div class="item-container">
                                         <div class="image">
-                                            <img src="rajeshimedia/Premium Veg Thali.png" cook">
+                                            <img src="rajeshimedia/Premium Veg Thali.png" alt="cook">
                                             <div class="overlay">
                                                 <a class="fancybox overlay-inner"
                                                     href="rajeshimedia/Premium Veg Thali.png"
@@ -1013,7 +1013,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-1-4 mix work-item dinner heading_space">
+                            <div class="col-1-4 mix work-item starters heading_space">
                                 <div class="wrap-col">
                                     <div class="item-container">
                                         <div class="image">
@@ -1050,7 +1050,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-1-4 mix work-item dinner heading_space">
+                            <div class="col-1-4 mix work-item drinks heading_space">
                                 <div class="wrap-col">
                                     <div class="item-container">
                                         <div class="image">
@@ -1068,7 +1068,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-1-4 mix work-item lunch heading_space">
+                            <div class="col-1-4 mix work-item starters heading_space">
                                 <div class="wrap-col">
                                     <div class="item-container">
                                         <div class="image">
@@ -1108,10 +1108,11 @@
                                 <div class="wrap-col">
                                     <div class="item-container">
                                         <div class="image">
-                                            <img src="images/images-gallery8.jpg" alt="cook">
+                                            <img src="rajeshimedia/Tandoori Chicken.png" alt="cook">
                                             <div class="overlay">
-                                                <a class="video fancybox.iframe overlay-inner"
-                                                    href="https://player.vimeo.com/video/94224205?autoplay=1">
+                                                <a class="fancybox overlay-inner"
+                                                    href="rajeshimedia/Tandoori Chicken.png"
+                                                    data-fancybox-group="gallery">
                                                     <i class=" icon-eye6"></i></a>
                                             </div>
                                         </div>
