--- a/Contact.html
+++ b/Contact.html
@@ -241,7 +241,7 @@
         }
 
         .inner-banner {
-            background: url(assets/images/About-Banner.jpg) no-repeat;
+            background: url(rajeshimedia/contactbanner.png) no-repeat;
             width: 100%;
             position: relative;
             min-height: 315px;
