--- a/Gallery.html
+++ b/Gallery.html
@@ -1123,6 +1123,43 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- New Breakfast/Lunch Items -->
+                            <div class="col-1-4 mix work-item lunch heading_space">
+                                <div class="wrap-col">
+                                    <div class="item-container">
+                                        <div class="image">
+                                            <img src="rajeshimedia/Traditionally.png" alt="cook">
+                                            <div class="overlay">
+                                                <a class="fancybox overlay-inner" href="rajeshimedia/Traditionally.png"
+                                                    data-fancybox-group="gallery">
+                                                    <i class=" icon-eye6"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="gallery_content">
+                                            <h3><a href="#">Hyderabadi Breakfast Special</a></h3>
+                                            <p>Traditional Paya & Nihari morning platter</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-1-4 mix work-item lunch heading_space">
+                                <div class="wrap-col">
+                                    <div class="item-container">
+                                        <div class="image">
+                                            <img src="images/veg wedding.jpg" alt="cook">
+                                            <div class="overlay">
+                                                <a class="fancybox overlay-inner" href="images/veg wedding.jpg"
+                                                    data-fancybox-group="gallery">
+                                                    <i class=" icon-eye6"></i></a>
+                                            </div>
+                                        </div>
+                                        <div class="gallery_content">
+                                            <h3><a href="#">South Indian Breakfast Platter</a></h3>
+                                            <p>Classic Idly, Wada, and Sambar setup</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
