--- a/Contact.html
+++ b/Contact.html
@@ -497,8 +497,8 @@
             </div>
             <div class="contact-grids d-grid" style="display: grid;">
                 <div class="contact-left-img">
-                    <img src="images/HN_con.jpg" class="img-fluid radius-image foots" alt="" data-aos="zoom-in-down"
-                        data-aos-duration="3000">
+                    <img src="rajeshimedia/contactpic.png" class="img-fluid radius-image foots" alt=""
+                        data-aos="zoom-in-down" data-aos-duration="3000">
                 </div>
                 <div class="contact-right">
                     <form action="https://sendmail.w3layouts.com/submitForm" method="post" class="signin-form">
@@ -546,8 +546,9 @@
             </div>
             <div class="map-iframe mt-5 pt-md-4">
                 <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15220.529329439149!2d78.4140122!3d17.5011953!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb91da54f7b00d%3A0x1f8fdc43210fdcf9!2sHN%20Caterers!5e0!3m2!1sen!2sin!4v1701251059400!5m2!1sen!2sin"
-                    width="100%" height="400" frameborder="0" style="border: 0px;" allowfullscreen=""></iframe>
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3805.1093825801136!2d78.34966481116747!3d17.502291183335323!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb922116c12703%3A0xd35b44a57cae03ef!2sSree%20Rajesh%20Caterers!5e0!3m2!1sen!2sin!4v1770650623435!5m2!1sen!2sin"
+                    width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
     </section>
