--- a/Gallery.html
+++ b/Gallery.html
@@ -978,10 +978,10 @@
                                 <div class="wrap-col">
                                     <div class="item-container">
                                         <div class="image">
-                                            <img src="images/images-gallery1.jpg" alt="cook">
+                                            <img src="rajeshimedia/Traditional Mutton Biryani.png" alt="cook">
                                             <div class="overlay">
-                                                <a class="video fancybox.iframe overlay-inner"
-                                                    href="https://player.vimeo.com/video/94224205?autoplay=1">
+                                                <a class="fancybox overlay-inner"
+                                                    href="rajeshimedia/Traditional Mutton Biryani.png">
                                                     <i class=" icon-eye6"></i>
                                                 </a>
                                             </div>
@@ -1017,9 +1017,10 @@
                                 <div class="wrap-col">
                                     <div class="item-container">
                                         <div class="image">
-                                            <img src="images/images-gallery3.jpg" alt="cook">
+                                            <img src="rajeshimedia/Vegetable Manchuria.png" alt="cook">
                                             <div class="overlay">
-                                                <a class="fancybox overlay-inner" href="images/gallery3.jpg"
+                                                <a class="fancybox overlay-inner"
+                                                    href="rajeshimedia/Vegetable Manchuria.png"
                                                     data-fancybox-group="gallery">
                                                     <i class=" icon-eye6"></i>
                                                 </a>
@@ -1036,9 +1037,10 @@
                                 <div class="wrap-col">
                                     <div class="item-container">
                                         <div class="image">
-                                            <img src="images/images-gallery4.jpg" alt="cook">
+                                            <img src="rajeshimedia/Qubani Ka Meetha.png" alt="cook">
                                             <div class="overlay">
-                                                <a class="fancybox overlay-inner" href="images/gallery4.jpg"
+                                                <a class="fancybox overlay-inner"
+                                                    href="rajeshimedia/Qubani Ka Meetha.png"
                                                     data-fancybox-group="gallery">
                                                     <i class=" icon-eye6"></i></a>
                                             </div>
@@ -1054,9 +1056,10 @@
                                 <div class="wrap-col">
                                     <div class="item-container">
                                         <div class="image">
-                                            <img src="images/images-gallery5.jpg" alt="cook">
+                                            <img src="rajeshimedia/Double Ka Meeta.png" alt="cook">
                                             <div class="overlay">
-                                                <a class="fancybox overlay-inner" href="images/gallery5.jpg"
+                                                <a class="fancybox overlay-inner"
+                                                    href="rajeshimedia/Double Ka Meeta.png"
                                                     data-fancybox-group="gallery">
                                                     <i class=" icon-eye6"></i></a>
                                             </div>
@@ -1072,9 +1075,10 @@
                                 <div class="wrap-col">
                                     <div class="item-container">
                                         <div class="image">
-                                            <img src="images/images-gallery6.jpg" alt="cook">
+                                            <img src="rajeshimedia/Chicken 65 Special.png" alt="cook">
                                             <div class="overlay">
-                                                <a class="fancybox overlay-inner" href="images/gallery6.jpg"
+                                                <a class="fancybox overlay-inner"
+                                                    href="rajeshimedia/Chicken 65 Special.png"
                                                     data-fancybox-group="gallery">
                                                     <i class=" icon-eye6"></i></a>
                                             </div>
@@ -1128,9 +1132,10 @@
                                 <div class="wrap-col">
                                     <div class="item-container">
                                         <div class="image">
-                                            <img src="rajeshimedia/Traditionally.png" alt="cook">
+                                            <img src="rajeshimedia/Hyderabadi Breakfast Special.png" alt="cook">
                                             <div class="overlay">
-                                                <a class="fancybox overlay-inner" href="rajeshimedia/Traditionally.png"
+                                                <a class="fancybox overlay-inner"
+                                                    href="rajeshimedia/Hyderabadi Breakfast Special.png"
                                                     data-fancybox-group="gallery">
                                                     <i class=" icon-eye6"></i></a>
                                             </div>
@@ -1146,9 +1151,10 @@
                                 <div class="wrap-col">
                                     <div class="item-container">
                                         <div class="image">
-                                            <img src="images/veg wedding.jpg" alt="cook">
+                                            <img src="rajeshimedia/South Indian Breakfast Platter.png" alt="cook">
                                             <div class="overlay">
-                                                <a class="fancybox overlay-inner" href="images/veg wedding.jpg"
+                                                <a class="fancybox overlay-inner"
+                                                    href="rajeshimedia/South Indian Breakfast Platter.png"
                                                     data-fancybox-group="gallery">
                                                     <i class=" icon-eye6"></i></a>
                                             </div>
