--- a/Gallery.html
+++ b/Gallery.html
@@ -67,6 +67,28 @@
             height: 65px;
         }
 
+        /* Gallery Layout Fix */
+        #gallery .wrap-content {
+            display: flex !important;
+            flex-wrap: wrap !important;
+        }
+
+        #gallery .work-item {
+            float: none !important;
+            display: flex !important;
+        }
+
+        #gallery .image img {
+            height: 250px !important;
+            object-fit: cover !important;
+        }
+
+        #gallery .gallery_content {
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+        }
+
         .navbar-default .navbar-collapse {
             margin-top: 10px;
         }
@@ -978,10 +1000,10 @@
                                 <div class="wrap-col">
                                     <div class="item-container">
                                         <div class="image">
-                                            <img src="rajeshimedia/Traditional Mutton Biryani.png" alt="cook">
+                                            <img src="rajeshimedia/Traditional%20Mutton%20Biryani.png" alt="cook">
                                             <div class="overlay">
                                                 <a class="fancybox overlay-inner"
-                                                    href="rajeshimedia/Traditional Mutton Biryani.png">
+                                                    href="rajeshimedia/Traditional%20Mutton%20Biryani.png">
                                                     <i class=" icon-eye6"></i>
                                                 </a>
                                             </div>
@@ -997,10 +1019,10 @@
                                 <div class="wrap-col">
                                     <div class="item-container">
                                         <div class="image">
-                                            <img src="rajeshimedia/Premium Veg Thali.png" alt="cook">
+                                            <img src="rajeshimedia/Premium%20Veg%20Thali.png" alt="cook">
                                             <div class="overlay">
                                                 <a class="fancybox overlay-inner"
-                                                    href="rajeshimedia/Premium Veg Thali.png"
+                                                    href="rajeshimedia/Premium%20Veg%20Thali.png"
                                                     data-fancybox-group="gallery">
                                                     <i class=" icon-eye6"></i>
                                                 </a>
@@ -1017,19 +1039,19 @@
                                 <div class="wrap-col">
                                     <div class="item-container">
                                         <div class="image">
-                                            <img src="rajeshimedia/Vegetable Manchuria.png" alt="cook">
+                                            <img src="rajeshimedia/Vegetable%20Manchuria.png" alt="cook">
                                             <div class="overlay">
                                                 <a class="fancybox overlay-inner"
-                                                    href="rajeshimedia/Vegetable Manchuria.png"
+                                                    href="rajeshimedia/Vegetable%20Manchuria.png"
                                                     data-fancybox-group="gallery">
                                                     <i class=" icon-eye6"></i>
                                                 </a>
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="gallery_content">
-                                        <h3><a href="#">Vegetable Manchuria</a></h3>
-                                        <p>Crispy and delicious Indo-Chinese starter</p>
+                                        <div class="gallery_content">
+                                            <h3><a href="#">Vegetable Manchuria</a></h3>
+                                            <p>Crispy and delicious Indo-Chinese starter</p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -1037,10 +1059,10 @@
                                 <div class="wrap-col">
                                     <div class="item-container">
                                         <div class="image">
-                                            <img src="rajeshimedia/Qubani Ka Meetha.png" alt="cook">
+                                            <img src="rajeshimedia/Qubani%20Ka%20Meetha.png" alt="cook">
                                             <div class="overlay">
                                                 <a class="fancybox overlay-inner"
-                                                    href="rajeshimedia/Qubani Ka Meetha.png"
+                                                    href="rajeshimedia/Qubani%20Ka%20Meetha.png"
                                                     data-fancybox-group="gallery">
                                                     <i class=" icon-eye6"></i></a>
                                             </div>
@@ -1056,10 +1078,10 @@
                                 <div class="wrap-col">
                                     <div class="item-container">
                                         <div class="image">
-                                            <img src="rajeshimedia/Double Ka Meeta.png" alt="cook">
+                                            <img src="rajeshimedia/Double%20Ka%20Meeta.png" alt="cook">
                                             <div class="overlay">
                                                 <a class="fancybox overlay-inner"
-                                                    href="rajeshimedia/Double Ka Meeta.png"
+                                                    href="rajeshimedia/Double%20Ka%20Meeta.png"
                                                     data-fancybox-group="gallery">
                                                     <i class=" icon-eye6"></i></a>
                                             </div>
@@ -1075,10 +1097,10 @@
                                 <div class="wrap-col">
                                     <div class="item-container">
                                         <div class="image">
-                                            <img src="rajeshimedia/Chicken 65 Special.png" alt="cook">
+                                            <img src="rajeshimedia/Chicken%2065%20Special.png" alt="cook">
                                             <div class="overlay">
                                                 <a class="fancybox overlay-inner"
-                                                    href="rajeshimedia/Chicken 65 Special.png"
+                                                    href="rajeshimedia/Chicken%2065%20Special.png"
                                                     data-fancybox-group="gallery">
                                                     <i class=" icon-eye6"></i></a>
                                             </div>
@@ -1094,9 +1116,9 @@
                                 <div class="wrap-col">
                                     <div class="item-container">
                                         <div class="image">
-                                            <img src="rajeshimedia/Paneer Tikka.png" alt="cook">
+                                            <img src="rajeshimedia/Paneer%20Tikka.png" alt="cook">
                                             <div class="overlay">
-                                                <a class="fancybox overlay-inner" href="rajeshimedia/Paneer Tikka.png"
+                                                <a class="fancybox overlay-inner" href="rajeshimedia/Paneer%20Tikka.png"
                                                     data-fancybox-group="gallery">
                                                     <i class=" icon-eye6"></i></a>
                                             </div>
@@ -1112,10 +1134,10 @@
                                 <div class="wrap-col">
                                     <div class="item-container">
                                         <div class="image">
-                                            <img src="rajeshimedia/Tandoori Chicken.png" alt="cook">
+                                            <img src="rajeshimedia/Tandoori%20Chicken.png" alt="cook">
                                             <div class="overlay">
                                                 <a class="fancybox overlay-inner"
-                                                    href="rajeshimedia/Tandoori Chicken.png"
+                                                    href="rajeshimedia/Tandoori%20Chicken.png"
                                                     data-fancybox-group="gallery">
                                                     <i class=" icon-eye6"></i></a>
                                             </div>
@@ -1132,10 +1154,10 @@
                                 <div class="wrap-col">
                                     <div class="item-container">
                                         <div class="image">
-                                            <img src="rajeshimedia/Hyderabadi Breakfast Special.png" alt="cook">
+                                            <img src="rajeshimedia/Hyderabadi%20Breakfast%20Special.png" alt="cook">
                                             <div class="overlay">
                                                 <a class="fancybox overlay-inner"
-                                                    href="rajeshimedia/Hyderabadi Breakfast Special.png"
+                                                    href="rajeshimedia/Hyderabadi%20Breakfast%20Special.png"
                                                     data-fancybox-group="gallery">
                                                     <i class=" icon-eye6"></i></a>
                                             </div>
@@ -1151,10 +1173,10 @@
                                 <div class="wrap-col">
                                     <div class="item-container">
                                         <div class="image">
-                                            <img src="rajeshimedia/South Indian Breakfast Platter.png" alt="cook">
+                                            <img src="rajeshimedia/South%20Indian%20Breakfast%20Platter.png" alt="cook">
                                             <div class="overlay">
                                                 <a class="fancybox overlay-inner"
-                                                    href="rajeshimedia/South Indian Breakfast Platter.png"
+                                                    href="rajeshimedia/South%20Indian%20Breakfast%20Platter.png"
                                                     data-fancybox-group="gallery">
                                                     <i class=" icon-eye6"></i></a>
                                             </div>
@@ -1282,9 +1304,6 @@
         AOS.init();
     </script>
 
-</body>
-
-</html>
 </body>
 
 </html>
