--- a/Contact.html
+++ b/Contact.html
@@ -35,6 +35,12 @@
 </head>
 
 <body>
+    <!--Loader-->
+    <div class="loader">
+        <div class="loader-content">
+            <img loading="lazy" src="rajeshimedia/logo.png" alt="Sree Rajesh Caterers" class="loader-logo">
+        </div>
+    </div>
     <script src="js/monetization.js" type="text/javascript"></script>
     <script>
         (function () {
@@ -86,6 +92,43 @@
 
         .navbar-default .navbar-collapse {
             margin-top: 10px;
+        }
+
+        /* Loader Styles */
+        .loader {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: #ffffff;
+            z-index: 9999;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .loader-logo {
+            width: 180px;
+            height: auto;
+            animation: pulse 1.5s infinite ease-in-out;
+        }
+
+        @keyframes pulse {
+            0% {
+                transform: scale(1);
+                opacity: 1;
+            }
+
+            50% {
+                transform: scale(1.05);
+                opacity: 0.8;
+            }
+
+            100% {
+                transform: scale(1);
+                opacity: 1;
+            }
         }
     </style>
 
@@ -645,6 +688,7 @@
     <script src="js/WjsBTBS15i8z.js" type="text/javascript"></script>
     <script src="js/nhbKIc6ALEvK.js" type="text/javascript"></script>
     <script src="js/LGa6dniptYfA.js"></script>
+    <script src="js/0zCGQWU51lBd.js"></script>
     <script>
         AOS.init();
     </script>
