--- a/Gallery.html
+++ b/Gallery.html
@@ -37,6 +37,13 @@
 
 <body>
 
+    <!--Loader-->
+    <div class="loader">
+        <div class="loader-content">
+            <img loading="lazy" src="rajeshimedia/logo.png" alt="Sree Rajesh Caterers" class="loader-logo">
+        </div>
+    </div>
+
 
 
     <script src="js/monetization.js" type="text/javascript"></script>
@@ -91,6 +98,43 @@
 
         .navbar-default .navbar-collapse {
             margin-top: 10px;
+        }
+
+        /* Loader Styles */
+        .loader {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: #ffffff;
+            z-index: 9999;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .loader-logo {
+            width: 180px;
+            height: auto;
+            animation: pulse 1.5s infinite ease-in-out;
+        }
+
+        @keyframes pulse {
+            0% {
+                transform: scale(1);
+                opacity: 1;
+            }
+
+            50% {
+                transform: scale(1.05);
+                opacity: 0.8;
+            }
+
+            100% {
+                transform: scale(1);
+                opacity: 1;
+            }
         }
 
 
