--- a/Contact.html
+++ b/Contact.html
@@ -583,7 +583,7 @@
                     </div>
                     <div class="col-md-4 col-sm-4 contact-address" data-aos="zoom-in" data-aos-duration="3000">
                         <i class="fa fa-envelope"></i>
-                        <p>sreerajeshcateringsupply@yahoo.com</p>
+                        <p>sreerajeshcaterers@gmail.com</p>
                     </div>
                 </div>
             </div>
@@ -666,7 +666,7 @@
                                         41199</a></span>
                             </li>
                             <li class="mt-2"><i class="fa fa-envelope"></i><span><a
-                                        href="mailto:sreerajeshcateringsupply@yahoo.com">sreerajeshcateringsupply@yahoo.com</a></span>
+                                        href="mailto:sreerajeshcaterers@gmail.com">sreerajeshcaterers@gmail.com</a></span>
                             </li>
                         </ul>
                     </div>
