--- a/Gallery.html
+++ b/Gallery.html
@@ -1305,7 +1305,7 @@
                                         41199</a></span>
                             </li>
                             <li class="mt-2"><i class="fa fa-envelope"></i><span><a
-                                        href="mailto:sreerajeshcateringsupply@yahoo.com">sreerajeshcateringsupply@yahoo.com</a></span>
+                                        href="mailto:sreerajeshcaterers@gmail.com">sreerajeshcaterers@gmail.com</a></span>
                             </li>
                         </ul>
                     </div>
