--- a/Non-Veg.html
+++ b/Non-Veg.html
@@ -1105,8 +1105,8 @@
                                 <i class="fa fa-envelope">
                                 </i>
                                 <span>
-                                    <a href="mailto:sreerajeshcateringsupply@yahoo.com">
-                                        sreerajeshcateringsupply@yahoo.com
+                                    <a href="mailto:sreerajeshcaterers@gmail.com">
+                                        sreerajeshcaterers@gmail.com
                                     </a>
                                 </span>
                             </li>
