--- a/index.html
+++ b/index.html
@@ -981,7 +981,7 @@
               <li class="mt-2"><i class="fa fa-phone"></i><span><a href="tel:+91 9246241199">+91 92462 41199</a></span>
               </li>
               <li class="mt-2"><i class="fa fa-envelope"></i><span><a
-                    href="mailto:sreerajeshcateringsupply@yahoo.com">sreerajeshcateringsupply@yahoo.com</a></span></li>
+                    href="mailto:sreerajeshcaterers@gmail.com">sreerajeshcaterers@gmail.com</a></span></li>
             </ul>
             <!--<form action="#" class="subscribe d-flex" method="post" style="display: flex;">-->
             <!--    <input type="email" name="email" placeholder="Email Address" required="">-->
