--- a/index.html
+++ b/index.html
@@ -750,6 +750,9 @@
             <li><a href="#"
                 onclick="openPdfConfirm(event, 'rajeshimedia/pdfs/1000 Members Excellency.pdf', '1000 Members Excellency')">1000
                 Members Excellency</a></li>
+            <li><a href="#"
+                onclick="openPdfConfirm(event, 'rajeshimedia/pdfs/non veg menu.jpeg', 'Non-Veg Menu')">Non-Veg
+                Menu</a></li>
             <li><a href="#" onclick="openPdfConfirm(event, 'rajeshimedia/pdfs/veg menu.pdf', 'Veg Menu')">Veg Menu</a>
             </li>
           </ul>
