--- a/Veg.html
+++ b/Veg.html
@@ -1867,6 +1867,9 @@
         </div>
     </footer>
     <!-- //footer -->
+    <a href="https://wa.me/919246241199" class="whatsapp-float" target="_blank">
+        <i class="fa fa-whatsapp my-float"></i>
+    </a>
     <a href="#" id="back-top">
         <i class="fa fa-angle-up fa-2x">
         </i>
