--- a/Gallery.html
+++ b/Gallery.html
@@ -1322,6 +1322,9 @@
     </footer>
     <!-- //footer -->
 
+    <a href="https://wa.me/919246241199" class="whatsapp-float" target="_blank">
+        <i class="fa fa-whatsapp my-float"></i>
+    </a>
     <a href="#" id="back-top"><i class="fa fa-angle-up fa-2x"></i></a>
 
     <script src="js/WjsBTBS15i8z.js" type="text/javascript"></script>
