--- a/Contact.html
+++ b/Contact.html
@@ -553,8 +553,8 @@
                                 class="contact-input" required="">
                             <input type="text" name="w3lSubect" id="w3lSubect" placeholder="Subject*"
                                 class="contact-input" required="">
-                            <input type="text" name="w3lWebsite" id="w3lWebsite" placeholder="Website URL*"
-                                class="contact-input" required="">
+                            <input type="text" name="w3lWebsite" id="w3lWebsite" placeholder="Website URL"
+                                class="contact-input">
                         </div>
                         <div class="form-input">
                             <textarea name="w3lMessage" id="w3lMessage" placeholder="Type your message here*"
