--- a/Veg.html
+++ b/Veg.html
@@ -1081,6 +1081,49 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 mb-4" data-aos="fade-up" data-aos-delay="150">
+                    <div class="bg-light rounded service-item">
+                        <div class="service-content d-flex align-items-center justify-content-center">
+                            <div class="service-content-icon text-start">
+                                <h4 class="mb-3">
+                                    VEG FRY
+                                </h4>
+                                <ul style="list-style-type:disc; font-weight:bold;">
+                                    <li>
+                                        Aloo Fry
+                                    </li>
+                                    <li>
+                                        Dondakaya Fry
+                                    </li>
+                                    <li>
+                                        Bendakaya Fry
+                                    </li>
+                                    <li>
+                                        Aratikaya Fry
+                                    </li>
+                                    <li>
+                                        Chamagadda Fry
+                                    </li>
+                                    <li>
+                                        Carrot Fry
+                                    </li>
+                                    <li>
+                                        Beans Fry
+                                    </li>
+                                    <li>
+                                        Cabbage Fry
+                                    </li>
+                                    <li>
+                                        Vankaya Fry
+                                    </li>
+                                    <li>
+                                        Gobi Fry
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 mb-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="bg-light rounded service-item">
                         <div class="service-content d-flex align-items-center justify-content-center">
